### Update 1.13-rc1 🎉 (November 24, 2024)

- Added playing a notification on the desktop about hiding the main window in the system tray.
- Added ability to download tracks/playlists with Google OAuth 2.0, which gives 99% probability of avoiding bot detection errors etc.
- It is now allowed to enter your own or modify the URL in the input box at the top of the main window, so the function of specifying a custom url in the arguments to run has been removed.
- The application now remembers not only the size, but also the position of the main window. (On by default, disable: Settings > Main > Save and restore window geometry).
- Small changes to the user interface.
- Fixed a bug where shortcuts for `Back` and `Forward` actions did not work.
- In the settings dialog, you can now freely restart the application without saving.
- Tracks are now converted to `.mp3` format using `ffmpeg` after downloading.

### Update 1.12.1 🎉 (November 9, 2024)

- Added a new domain to the list of allowed sites for navigation, namely `consent.youtube.com`, without which cookie saving could not be accepted or rejected.
- Other minor fixes and improvements.

### Update 1.12 🎉 (October 27, 2024)

- The buttons on the main window toolbar have reverted back to the Fluent interface tooltips.
- All buttons in the mini-player have also gotten modern Fluent interface tooltips.
- PyQt updated to 5.15.11.
- PyQtWebEngine updated to 5.15.7.
- Other minor fixes and improvements.

### Update 1.12-rc1 🎉 (October 27, 2024)

- The color of the toolbar in the main window has become darker.
- Mini player now tracks track progress in real time - in the left corner current track time, in the right total track time.
- System Tray App Icon plugin is now enabled by default.
- Mini player is now available to open at any URL.
- Improved saving of settings.
- Discord Rich Presence plugin buttons have been removed.
- Clicking the System Tray App Icon now only shows the window when minimized.