@@ -10,7 +10,7 @@
 
 <p align="center">
   <a style="text-decoration:none">
-      <img src="https://img.shields.io/badge/Python-3.11.3-blue.svg?color=00B16A" alt="Python 3.11.3"/>
+      <img src="https://img.shields.io/badge/Python-3.12.3-blue.svg?color=00B16A" alt="Python 3.11.3"/>
   </a>
   <a style="text-decoration:none">
       <img src="https://img.shields.io/badge/PyQt-5.15.11-blue?color=00B16A" alt="PyQt 5.15.11"/>
